styles/default.css
html {}

body { 
  margin: 0; padding: 0;
  font-family: Gill Sans, Verdana, Helvetica, sans-serif;
  font-size: 9pt; text-align: center}

a, a:visited {color: #242;}
a.describe {margin-right: 6px}

tr:hover {
  background-color: #ddd;}

#PG { width: 1000px; 
      text-align: left; margin: 10px auto 10px auto; background-color: #fff}

#HD { 
  width: 100%; 
  float: left; 
  height: 60px;
  text-align: center; 
  background-color: #006699}

#HD img { margin-top: 0 0 0 10px; padding: 0; vertical-align: middle;}

#HD h1 { 
  font-size: 14pt; 
  float:left; 
  margin: 0 0 0 20px; 
  vertical-align: top; 
  color: #fff; 
  padding: 0}

#HD h1 a { color: #fff}

#h1 div.page-resource-uri {float: left}
#hd_l { float: left; clear: left}
#hd_r { float: right; clear: right}
#hd_r img { margin: 10px 10px 0 0; vertical-align: middle}

#opl_logo { border: 0; float: left; margin-left: 6px;}

#MD { width: 100%; 
      float: left; 
      margin-top: 0; 
      background-color: #e9f2f7; 
      padding-bottom: 10px; 
      margin-left: auto; margin-right: auto;}

#FT { width: 100%; float: left; 
      border-top: 1px solid #335;
      text-align: center;
      padding-top: 10px; }

#ft_b { padding-top: 10px; }

span.copyright { font-size: 8pt; color: #888}

div.page_resource_info {
  width: 100%; float: left; clear: left;
  text-align: left;
  margin-top: 15px; 
}

div.page_resource_info h2 { display: inline; padding: 0; margin-left: 10px;}

td.rnk { margin: 0; padding: 0; }
img.rnk { float: left; clear: left; margin-top: 1px;}

/*#new_srch { margin-top: 40px; margin-bottom: 40px; width: 100%; text-align: center;}
#new_srch label.left_txt { margin-right: 10px;}*/

div.expln { margin: 0 100px 5px 100px;}
div.doc_ctr { margin: 10px; }
div.main_actions { float: left; clear: left; width: 100%; text-align: left;}
div.main_expln { float: left; clear: left; text-align: center; width: 100%;}

#res { float: left; clear: left; margin: 5px 0px 0px 0px; width: 800px;}
#res h3 { margin-top: 0; margin-left: 5px;}

#new_search_txt {}
#new_uri_txt {}

table.result { clear:left; width: 100%; margin: 3px; font-size: 9pt;}
table.result td { max-width: 350px; overflow: hidden; font-size: 9pt;}
span.iri { font-weight: bold }
span.value { font-weight: bold }

table.dataset_list td { margin: 0 10px 0 10px }
th { text-align: left; }

div.subj_nav { float: left; width: 100%;}

p.subj_desc {
  float: left;
  clear: left;
  width: 750px;
  text-align: left; 
  font-style: italic; 
  font-size: 12pt; 
  margin: 10px; 
  padding: 10px;
  border: 1px solid black;}

div.subj_nav div.nav { 
  float: right; 
  clear: right;
  text-align: left; 
  width: 200px;
  margin-top: 10px; 
  border-left: 1px solid #ddd; }

div.subj_nav div.nav ul { list-style-type: none; padding: 0; margin-left: 10px;}
div.subj_nav div.nav h3 { text-align: left; margin-left: 10px; }

table.description { text-align: left; margin: 10px; float: left;clear: left;}
table.description td { vertical-align: top;}
table.description ul.obj { 
  padding: 0; 
  margin-top: 0; 
  margin-left; 10px; 
  list-style-type: none } /* list-style-type: none} */

#main_srch { 
  margin-top: 15px; 
  margin-left: auto;
  margin-right: auto}

#TAB_ROW { width: 800px; margin-left: auto; margin-right: auto;}


div.tab { 
  float: left;
  min-width: 10em;
  padding-top: 10px;
  padding-left: 10px;
  padding-bottom: 4px;
  cursor: pointer; 
  background-image: url(/fct/images/tablv1default.png); 
  margin-right: 4px;
}

div.tab a { text-decoration: none; white-space: nowrap; margin-right: 5px; }

div.tab:first-child { clear: left; }

div.tab_selected { 
  background-image: url(/fct/images/tablv1sel.png); 
  font-weight: bold;
  padding-top: 10px;
  padding-bottom: 5px;
  border-top: 1px solid #ddd;
  border-right: 1px solid #ddd;
  border-left: 1px solid #ddd;
  border-bottom: 2px solid #fff; 
}

#TAB_ROW div.tab_act { float: right; padding-top: 10px;}

#TAB_CTR { width: 800px; margin-left: auto; margin-right: auto; text-align: center;}
#TAB_CTR table { width: 100%; }

body.usage_page p.subj_desc { width: 900px; }
body.usage_page #TAB_ROW { margin-left: 10px; width: 920px}
body.usage_page #TAB_CTR { margin-left: 10px; width: 920px}
body.usage_page td { text-align: left;  margin: 0 10px 0 10px; margin-left: 10px;width: auto;}
body.usage_page th { text-align: left;  margin: 0 10px 0 10px; margin-left: 10px;width: auto;}


div.tab_page {
  float: left;
  width: 100%;
  min-height: 150px;
  background-color: #ffffff;
  background-image: url(/fct/images/tab_page_back1.png); 
  background-repeat: repeat-x;
  background-position: bottom left;
  border-left: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
}

div.tab_page form { margin-top: 40px;}
div.tab_page form label { font-weight: bold; }

div.pg_b_nav { width: 100%; margin-left: 10px;}

div.autocomplete_list { 
  padding: 0;
  margin: 0;
  list-style-type: none;
  text-align: left;
  background: #fff; 
  border: 1px solid #888; }

div.ac_list_option { 
  text-align: left; 
  margin: 2px 5px 2px 5px; 
  cursor: pointer; 
  color: #888 }

div.ac_list_option:hover { color: #666 }

span.descr { font-size: 9pt; color: #557; margin-top: 0;}

#result_nfo { float: left; clear: both; width: 100%; margin-top: 8px; margin-left: 5px; color: #446;}

#fct_nav { 
  float: left; 
  margin-left: 10px;
  margin-top: 4px; 
  padding-left: 3px; 
  width: 186px; 
  border-left: 1px solid #335;}

#fct_nav h3 { margin: 0; padding: 0;}

#fct_nav ul { list-style-type: none; padding: 0; margin: 0;}
#fct_nav ul li { list-style-type: none;}
#fct_nav ul li a { text-decoration: none;}
#fct_nav ul li a:hover { text-decoration: underline;}
#fct_nav ul { margin-top: 8px; }
#fct_nav ul.n2 { border-top: 1px solid #ddd;}

#FT img { border: 0;}

input.num { text-align: right;}

.dlg { background-color: #ddd;}
.dlg .title { margin: 0; 
              text-align: center; 
              background-image: url(/images/dlg_title_bkg.png); 
              border-bottom: 1px inset}
.dlg form { margin: 0; width: 100%;}
.dlg .btn_bar { margin: 0; 
                padding-top: 2ex; 
                width: 100%; height: 6ex; 
                border-top: 1px solid #333; background-color: #ddd; text-align: right; }
.dlg .btn_bar button { margin-right: 4px; }
.dlg .btn_bar input[type="submit"] { margin-right: 6px; }
.dlg .title h2 { font-size: 10pt; margin: 0; color: #333;}
.dlg .expln { margin-left: 120px }
.dlg .fm_sect { margin: 0 10px 15px 10px; border-top: 1px solid #333}
.dlg .fm_sect:first-child { border: 0; margin-top: 20px;}
.dlg .fm_sect h3 { font-size: 9pt; margin: 0}
.dlg label.left_txt { float: left; clear: left; width: 120px;}
.dlg .ctl_expln { margin-left: 120px; font-size: 8pt; font-style: oblique}
 
#opts_ctr {
  width: 100%;
  text-align: center;
  background-color: white; 
}

#opts {
  margin: auto;
  border: 1pt solid #555;
  text-align: left;
  font-size: 9pt;
  width: 650px;
}


#opts input[type="checkbox"] { margin-left: 120px; }

#res .btn_bar { text-align: right; border-top: 1px solid #333; margin-top: 15px; padding-top: 8px;}

div.dbg { 
  display: none; }

/*div.dbg { padding: 10px; background-color: yellow; border: 1px solid black}*/

div#pager { margin-top: 10px; float: right;}
div#pager a { background-color: #ddd; 
              padding: 2px; 
              border: 1px solid #335; 
              padding: 3px 5px 3px 5px; 
              width: auto; 
              text-decoration: none; 
              text-align: center;}

h3#view_info {
  margin-top: 5px;
  margin-bottom: 5px;
  font-size: 10pt;
}

div#top_ctr { 
  font-size: 10pt;
  width: 995px;
  background-color: #ccc;
  margin-top: 0px; padding-top: 4px;
  padding-left: 5px; padding-right: -4px;
}

div.error_msg { margin: 5px; }
div.error_msg h2 {}
div.error_msg div.body {}
div.error_msg div.nav { margin-top: 10px;}
div.error_msg div.diag { font-size: 8pt }
div.error_msg div.diag h3 {}

div.facet_ctr {
  float: left;
  margin-left: 4px;
}

div.facet_ctr:first-child { margin-left: 0;}

.facet_hd { 
  margin: 0; 
  text-align: center;
  border-top: 1px solid #333;
  border-left: 1px solid #333;
  border-right: 1px solid #666;
  background-color: #aaa;
  background-image: url(/images/dlg_title_bkg.png);}

div.facet { 
  float:left; 
  height: 20em;  
  width: 394px; 
  overflow-y: auto; 
  overflow-x: hidden; 
  background-color: #fff;
  border: 1px inset;
}

div#sparql_link { margin-top: 10px; float: right;}
div#sparql_link a { 
  background-color: #ddd; 
  padding: 2px; 
  border: 1px solid #335; 
  padding: 3px 5px 3px 5px; 
  width: auto; 
  text-decoration: none; 
  text-align: center;}

#featured_list { font-size: 9pt;}
#featured_list td { font-size: 9pt;}

